--- a/devops-build/.dockerignore
+++ b/devops-build/.dockerignore
@@ -1,14 +1,8 @@
-# Ignore node_modules in the Docker image (unless needed for a specific reason)
 node_modules/
-
-# Ignore the build folder, as it is not needed in the image (unless you're building the app inside the container)
 build/
-
-# Ignore .env file
 .env
-
-# Ignore Dockerfile itself
 Dockerfile
-
-# Ignore Git files
 .git/
+*.log
+.vscode/
+.idea/
